WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250373
Fix buggy assert in WebSWContextManagerConnection::updateAppInitiatedValue
https://bugs.webkit.org/show_bug.cgi?id=250373
Summary
Fix buggy assert in WebSWContextManagerConnection::updateAppInitiatedValue
youenn fablet
Reported
2023-01-10 02:07:29 PST
Fix buggy assert in WebSWContextManagerConnection::updateAppInitiatedValue
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-10 02:08:21 PST
<
rdar://problem/104067420
>
youenn fablet
Comment 2
2023-01-10 02:13:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8447
EWS
Comment 3
2023-01-10 09:29:54 PST
Committed
258726@main
(205fbbb4b2d6): <
https://commits.webkit.org/258726@main
> Reviewed commits have been landed. Closing PR #8447 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug