Cherry-pick 258726@main (205fbbb4b2d6). https://bugs.webkit.org/show_bug.cgi?id=250373

Fix buggy assert in WebSWContextManagerConnection::updateAppInitiatedValue
    https://bugs.webkit.org/show_bug.cgi?id=250373
    rdar://problem/104067420

    Reviewed by Chris Dumez.

    We receive the message from a work queue and should account for it.

    * Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.cpp:
    (WebKit::WebSWContextManagerConnection::updateAppInitiatedValue):

    Canonical link: https://commits.webkit.org/258726@main